# goose-mark

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRODUCT.md  README.md  add_rounded.js  browser.html  components.json  index.html  package.json  playwright.config.ts  plugin.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  ui-migration-preview.html  uno.config.ts  utools-bookmarks-spec.md  vite.config.ts  vite.debug.ts  vite.sites.config.ts
.claude/: settings.local.json
.codex/environments/: environment.toml
.github/workflows/: deploy.yml
.openai/: hosting.json
docs/: feature-plan-rich-editor.md  newtab-local-data-contract.md
preload/: preload.cjs  preload.js
public/: manifest.json
scripts/: deploy.sh  guard-platform.mjs  sites-build.mjs  utools-build.js  watch-build.mjs
server/: db.js  iconService.js  index.js  migrate.js  package-lock.json  package.json  pnpm-lock.yaml  syncService.js
server/migrations/: 001_initial_sync_schema.sql
src/: App.tsx  App.vue  App.vue.patch  auto-imports.d.ts  components.d.ts  main.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: fonts.css  index.css  theme.css
src/components/: AppSidebar.tsx  AppSidebar.vue  BaseCard.tsx  BaseCard.vue  BlackHole.tsx  BlockNoteEditor.vue  BookmarkCard.tsx  BookmarkCard.vue  BookmarkIcon.tsx  BookmarkIcon.vue  CategoryMultiSelect.tsx  CategoryMultiSelect.vue  ContextMenu.tsx  (+25 more)
tasks/: lessons.md  todo.md
worker/: index.ts
(+175 files in other folders)
