[package]
name = "goose-marks"
version = "0.1.0"
description = "鹅的书签 - A bookmark manager desktop app"
authors = ["goose-marks"]
edition = "2021"

[lib]
name = "goose_marks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "goose-marks"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
